<resources>
    <string name="app_name">MiniApp3</string>
    <string name="spinner_item">Spinner String Item</string>

    <!-- Layouts -->
    <string name="splash_app_icon_description">App icon</string>

    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>

    <!-- Toolbar -->
    <string name="toolbar_tab_1">Search</string>
    <string name="toolbar_tab_2">Favorites</string>

    <!-- Favorites -->
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_thumbnail">Recipe thumbnail</string>

    <!-- Details -->
    <string name="details_image_content">Cocktail image</string>
    <string name="details_recipe_name">Recipe name</string>
    <string name="details_ingredients_title">Ingredients list:</string>
    <string name="details_ingredients">Ingredients</string>
    <string name="details_measures_title">Measures list:</string>
    <string name="details_measures">Measures</string>
    <string name="details_instructions_title">Instructions:</string>
    <string name="details_instructions">Instructions</string>
    <string name="details_button_description">Favorites button</string>

    <string name="no_internet_text">No network connection</string>
</resources>
